Sonar: Fix code smells and andre feil